# sentinel-ai

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile  requirements.txt
backend/src/: lib.rs  main.rs
config/: prometheus.yml  vector_store_config.json
config/honeypot/: galah_config.yaml  mimique_config.json
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONTRIBUTING.md  THREAT_MODELS.md
frontend/: Dockerfile  package.json  vite.config.ts
frontend/src/: App.tsx
modules/tep-protocol/: Cargo.toml  Dockerfile
modules/tep-protocol/src/: lib.rs
scripts/: generate_test_data.py  install.ps1  install.sh  setup_freebsd.sh  setup_macos.sh  test_environment.sh
test-environments/raspbian/: README.md  run_tests.sh
