[package]
name = "sentinel-ai-backend"
version = "0.1.0"
edition = "2021"
authors = ["BitCorp"]
license = "MIT"
description = "SentinelAI Backend - Rust/Tauri application"

[lib]
name = "sentinel_ai"
path = "src/lib.rs"

[[bin]]
name = "sentinel-ai"
path = "src/main.rs"

[dependencies]
tauri = { version = "1.5", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.34", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
redis = { version = "0.23", features = ["tokio-comp"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.5", features = ["v4", "serde"] }
jsonwebtoken = "9.2"
bcrypt = "0.15"
rand = "0.8"
futures = "0.3"
axum = { version = "0.7", features = ["ws", "macros"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.4"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
